# fdtd2d_cpp

./: .gitignore  CMakeLists.txt  cleanup.sh  main.cpp  run.sh
csv_files/: gaussian_fft_peak_number
myenv/: pyvenv.cfg
python/: mkpng.py  plot1d.py
sub_dir/: CMakeLists.txt
sub_dir/include/: base.hpp  constant.hpp  fdtd_1d.hpp  fdtd_2d.hpp  fft.hpp  parameter.hpp  set_coef_1d.hpp  set_coef_2d.hpp  set_eps_2d.hpp  set_sigma_2d.hpp  set_wave.hpp  vec1d.hpp  vec2d.hpp
